2019/4/25   胡居京电机校验后提交

--- a/app/src/main/res/layout/fragment_test_curve_vertic.xml
+++ b/app/src/main/res/layout/fragment_test_curve_vertic.xml
@@ -33,7 +33,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:background="#55555c"
-                android:orientation="vertical"></LinearLayout>
+                android:orientation="vertical"/>
 
 
         </LinearLayout>
