--- a/app/src/main/res/layout/fragment_test_parameter.xml
+++ b/app/src/main/res/layout/fragment_test_parameter.xml
@@ -6,19 +6,18 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/x30"
-        >
+        android:paddingBottom="@dimen/x30">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/x30"
             android:paddingLeft="@dimen/x5"
             android:paddingRight="@dimen/x5"
-            android:paddingTop="@dimen/x15"
-            android:paddingBottom="@dimen/x30"
-            >
+            android:paddingTop="@dimen/x15">
+
             <TextView
                 android:id="@+id/tv_tittle_task"
                 style="@style/TextView_style0"
@@ -30,12 +29,11 @@
                 android:id="@+id/lv_task_inf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_bg_listview"
                 android:layout_marginLeft="@dimen/x10"
                 android:layout_marginRight="@dimen/x10"
                 android:layout_marginTop="@dimen/x5"
-                android:padding="1dp"
-                ></com.motor.view.MyListView>
+                android:background="@drawable/shape_bg_listview"
+                android:padding="1dp"/>
 
 
             <TextView
@@ -46,30 +44,26 @@
                 android:text="@string/task_dj"
                 android:textSize="16sp" />
 
-           <com.motor.view.MyListView
+            <com.motor.view.MyListView
                 android:id="@+id/lv_dj_inf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_bg_listview"
                 android:layout_marginLeft="@dimen/x10"
                 android:layout_marginRight="@dimen/x10"
                 android:layout_marginTop="@dimen/x5"
-                android:padding="1dp"
-                ></com.motor.view.MyListView>
-
-
+                android:background="@drawable/shape_bg_listview"
+                android:padding="1dp"/>
 
 
             <com.motor.view.MyListView
                 android:id="@+id/lv_input_inf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/shape_bg_listview"
                 android:layout_marginLeft="@dimen/x10"
                 android:layout_marginRight="@dimen/x10"
                 android:layout_marginTop="@dimen/x5"
-                android:padding="1dp"
-                ></com.motor.view.MyListView>
+                android:background="@drawable/shape_bg_listview"
+                android:padding="1dp"/>
 
         </LinearLayout>
 
