--- a/app/src/main/res/layout/fragment_test_res_data.xml
+++ b/app/src/main/res/layout/fragment_test_res_data.xml
@@ -12,7 +12,7 @@
 
         android:background="@drawable/shape_show_test_data"
         android:overScrollMode="never"
-        android:scrollbars="none"></com.motor.view.MyNoScrollViewPager>
+        android:scrollbars="none"/>
 
 
     <LinearLayout
