--- a/app/src/main/res/layout/content_create_task.xml
+++ b/app/src/main/res/layout/content_create_task.xml
@@ -98,6 +98,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
+
                     <TextView
                         android:id="@+id/tv_param_motor_csff1"
                         style="@style/TextViewName"
@@ -204,7 +205,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -220,14 +221,14 @@
             android:id="@+id/ly_param_set"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
             android:orientation="vertical">
 
+            <!--额定电压、额定电流-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -286,6 +287,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!--额定功率。额定效率-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -349,6 +351,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!--空载功率、空载电流-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -413,6 +416,7 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <!--级数、无功经济当量-->
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -476,14 +480,53 @@
                 </LinearLayout>
             </LinearLayout>
 
-
+            <!--目标功率因数-->
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
-                android:orientation="horizontal"></LinearLayout>
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+                    <TextView
+                        style="@style/TextViewName"
+                        android:text="目标功率因数: " />
+                    <EditText
+                        android:id="@+id/et_param_set_mbglys"
+                        style="@style/EdittextInput" />
+                    <TextView
+                        style="@style/TextViewUnit"
+                        android:layout_marginLeft="5dp"
+                        android:text="" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+                    <TextView
+                        style="@style/TextViewName"
+                        android:text="            " />
+                    <EditText
+                        style="@style/EdittextInput"
+                        android:visibility="invisible"/>
+                    <TextView
+                        style="@style/TextViewUnit"
+                        android:layout_marginLeft="5dp"
+                        android:text="" />
+                </LinearLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
