--- a/app/src/main/res/layout/dialog_two_edittext.xml
+++ b/app/src/main/res/layout/dialog_two_edittext.xml
@@ -22,7 +22,7 @@
         android:layout_width="@dimen/x60"
         android:layout_height="@dimen/x20"
         android:gravity="center"
-        android:inputType="number"
+        android:inputType="numberDecimal|numberSigned"
         android:selectAllOnFocus="true"
         android:hint="1"
         android:background="@drawable/bg_selector_edittext"
@@ -40,7 +40,7 @@
         android:layout_width="@dimen/x60"
         android:layout_height="@dimen/x20"
         android:gravity="center"
-        android:inputType="number"
+        android:inputType="numberDecimal|numberSigned"
         android:selectAllOnFocus="true"
         android:hint="1"
         android:background="@drawable/bg_selector_edittext"
